--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: postgres:16.4-alpine3.20
     container_name: postgres
     environment:
-      - POSTGRES_PASSWORD="<my-root password>"
+      POSTGRES_PASSWORD: "<my-password>"
     ports:
       - "5432:5432"
     networks:
